--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/webmidi@3.1.7/dist/iife/webmidi.iife.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tone@14.7.77/build/Tone.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tonejs/piano@0.2.1/dist/Piano.js"></script>
 </head>
 <body>
+    <canvas id="visualizer"></canvas>
     <div class="container">
         <h1>MIDI Piano</h1>
         <div class="controls">
