--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js" type="module"></script>
+    <script src="script.js"></script>
 </body>
 </html>
