--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp">
     <!-- スタイルシートの読み込み -->
     <link rel="stylesheet" href="style.css">
-    <!-- 外部ライブラリの読み込み -->
-    <script src="https://cdn.jsdelivr.net/npm/webmidi@3.1.7/dist/iife/webmidi.iife.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/tone@14.7.77/build/Tone.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/soundfont-player@0.12.0/dist/soundfont-player.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <canvas id="visualizer"></canvas>
@@ -23,21 +19,6 @@
                 <label for="midiInput">MIDIデバイス:</label>
                 <select id="midiInput" class="midi-select">
                     <option value="">MIDIデバイスを選択してください</option>
-                </select>
-            </div>
-            <div class="control-group">
-                <label for="soundType">音源:</label>
-                <select id="soundType" class="sound-select">
-                    <option value="acoustic_grand_piano">グランドピアノ</option>
-                    <option value="bright_acoustic_piano">ブライトピアノ</option>
-                    <option value="electric_grand_piano">エレクトリックグランド</option>
-                    <option value="honkytonk_piano">ホンキートンク</option>
-                    <option value="electric_piano_1">エレクトリックピアノ1</option>
-                    <option value="electric_piano_2">エレクトリックピアノ2</option>
-                    <option value="harpsichord">ハープシコード</option>
-                    <option value="clavinet">クラビネット</option>
-                    <option value="celesta">チェレスタ</option>
-                    <option value="music_box">オルゴール</option>
                 </select>
             </div>
         </div>
@@ -104,7 +85,11 @@
             </div>
         </div>
     </div>
+    <!-- 外部ライブラリの読み込み -->
+    <script src="https://cdn.jsdelivr.net/npm/webmidi@3.1.7/dist/iife/webmidi.iife.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tone@14.7.77/build/Tone.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/soundfont-player@0.12.0/dist/soundfont-player.min.js"></script>
     <!-- メインスクリプトの読み込み -->
-    <script src="script.js" type="module" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
